- fix count down ended message not aligned on load (added a delay/timeout to that part) - fix drag element alignment to the title element (it didn't work with multi-lines, for example when having a title with 2 lines, and then removing one, the drag element wouldn't be aligned again). Now it is aligned to the first line of the title

--- a/style.css
+++ b/style.css
@@ -98,6 +98,16 @@
     position: relative;
     width: 48%;
     margin: 10px;
+
+    border-radius: 5px;
+
+    transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: ease-in;
+
+    -webkit-transition-property: background-color;
+    -webkit-transition-duration: 0.2s;
+    -webkit-transition-timing-function: linear;
     }
 
 
@@ -111,6 +121,11 @@
     padding-left: 30px;
     padding-right: 20px;
     }   
+
+.CountUp-count, .CountDown-count
+    {
+    padding: 0 15px;
+    }
 
 
 .CountUp-remove, .CountDown-remove
@@ -146,18 +161,6 @@
 
 
 
-.CountUp-container, .CountDown-container
-    {
-    border-radius: 5px;
-
-    transition-property: background-color;
-    transition-duration: 1s;
-    transition-timing-function: ease-in;
-
-    -webkit-transition-property: background-color;
-    -webkit-transition-duration: 0.2s;
-    -webkit-transition-timing-function: linear;
-    }   
 
 .watch-active
     {
